<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Xiaomi Settings -->
    <string name="app_title">Xiaomi Settings</string>
    <string name="tile_add">Add tile</string>
    <string name="tile_added">Tile added</string>
    <string name="tile_not_added">Tile not added</string>
    <string name="tile_already_added">Tile already added</string>
    <string name="tile_on">On</string>
    <string name="tile_off">Off</string>

    <!-- Thermal profiles -->
    <string name="thermal_title">Thermal profiles</string>
    <string name="thermal_summary">Adjust per-app thermal profiles for optimum performance</string>
    <string name="thermal_default">No optimization</string>
    <string name="thermal_benchmark">Performance</string>
    <string name="thermal_browser">Browser</string>
    <string name="thermal_camera">Camera</string>
    <string name="thermal_dialer">Dialer</string>
    <string name="thermal_gaming">Gaming</string>
    <string name="thermal_streaming">Streaming</string>

    <!-- Per-app refresh rate -->
    <string name="refresh_title">Per-app refresh rate</string>
    <string name="refresh_summary">Set the maximum refresh rate for a specific application</string>
    <string name="refresh_default">Default</string>
    <string name="refresh_standard">60 Hz</string>
    <string name="refresh_high">90 Hz</string>
    <string name="refresh_extreme">120 Hz</string>

    <!-- Clear Speaker -->
   <string name="clear_speaker_title">Clear speaker</string>
   <string name="clear_speaker_summary">Play a 30-second audio to clear the speaker</string>
   <string name="clear_speaker_description">Run this feature once or twice if you find that your speaker is lightly blocked by dust. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this feature 2-5 times while shaking your device with the speaker facing downwards.</string>

    <!-- Saturation -->
    <string name="saturation_title">Display Saturation</string>
    <string name="saturation_summary">Control the saturation level of the display</string>
    <string name="saturation_footer_summary">Changing the color mode in display settings will override the saturation level, requiring it to be reapplied.</string>

    <!-- Image preview -->
    <string name="image_preview_content_description">Preview</string>
    <string name="image_preview_next_page_content_description">Next</string>
    <string name="image_preview_previous_page_content_description">Previous</string>

    <!-- Custom seekbar -->
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">by default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong tap to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>
    
    <!-- Auto HBM -->
    <string name="auto_hbm_title">Automatic High Brightness Mode (HBM)</string>
    <string name="auto_hbm_main_switch_title">Use automatic HBM</string>
    <string name="tile_auto_hbm">Auto HBM</string>
    <string name="tile_hbm_on">Enabled</string>
    <string name="tile_hbm_off">Disabled</string>
    <string name="tile_hbm">HBM</string>
    <string name="tile_hbm_unavailable">HBM Unavailable</string>
    <string name="tile_auto_hbm_or_brightness_enabled">Auto HBM or Auto Brightness is enabled</string>
    <string name="hbm_mode_title">High Brightness Mode</string>
    <string name="hbm_mode_notification">High Brightness Mode is now activated. Long time usage may damage your display.</string>
    <string name="auto_hbm_summary">Automatically enable high brightness mode based on sunlight intensity (lux)</string>
    <string name="auto_hbm_threshold_title">Light threshold</string>
    <string name="auto_hbm_threshold_summary">Define the light intensity threshold in lux units at which HBM is activated</string>
    <string name="auto_hbm_enable_time_title">Enable time</string>
    <string name="auto_hbm_enable_time_summary">Duration in seconds that the light threshold must be continuously met to activate HBM</string>
    <string name="auto_hbm_disable_time_title">Disable time</string>
    <string name="auto_hbm_disable_time_summary">Duration in seconds for which HBM is deactivated if the light threshold falls below the set level</string>

    <!-- GameBar Overlay -->
    <string name="game_bar_title">GameBar</string>
    <string name="game_bar_summary">Enable the system overlay (FPS, Temp, etc.)</string>
    <string name="overlay_permission_required">Overlay permission is required</string>
    <string name="overlay_permission_granted">Overlay permission granted</string>
    <string name="overlay_permission_denied">Overlay permission denied</string>
    <string name="game_bar_tile_label">GameBar</string>
    <string name="game_bar_tile_description">Toggle the game overlay</string>

    <!-- Charge bypass strings -->
    <string name="charge_bypass_title">Bypass charging</string>
    <string name="charge_bypass_summary">Enable direct charging, bypassing battery</string>
    <string name="charge_bypass_warning">Warning: Bypass charging may cause increased device temperature or battery damage. Use with caution.</string>
    <string name="charge_bypass_unavailable">Bypass charging is not supported on this device</string>

    <!-- Core Control -->
    <string name="core_control_title">Core Control</string>
    <string name="core_control_summary">Manually enable or disable individual CPU cores</string>
    <string name="core_control_description">Advanced CPU control. Turning off cores may save battery or thermal load, but may affect performance and stability.\n\nAt least two little cores must remain online at all times.</string>
    <string name="core_0">Core 0 (Little)</string>
    <string name="core_1">Core 1 (Little)</string>
    <string name="core_2">Core 2 (Little)</string>
    <string name="core_3">Core 3 (Little)</string>
    <string name="core_4">Core 4 (Big)</string>
    <string name="core_5">Core 5 (Big)</string>
    <string name="core_6">Core 6 (Big)</string>
    <string name="core_7">Core 7 (Big)</string>

    <!-- Sound Control -->
    <string name="sound_control_title">Sound Control</string>
    <string name="mic_gain">Microphone gain (dB)</string>
    <string name="hp_left_gain">Left headphone gain</string>
    <string name="hp_right_gain">Right headphone gain</string>
    <string name="sound_control_enable">Enable sound control</string>

</resources>
