<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/core_control_title">

    <SwitchPreference
        android:key="core_0"
        android:title="@string/core_0" />

    <SwitchPreference
        android:key="core_1"
        android:title="@string/core_1" />

    <SwitchPreference
        android:key="core_2"
        android:title="@string/core_2" />

    <SwitchPreference
        android:key="core_3"
        android:title="@string/core_3" />

    <SwitchPreference
        android:key="core_4"
        android:title="@string/core_4" />

    <SwitchPreference
        android:key="core_5"
        android:title="@string/core_5" />

    <SwitchPreference
        android:key="core_6"
        android:title="@string/core_6" />

    <SwitchPreference
        android:key="core_7"
        android:title="@string/core_7" />

    <com.android.settingslib.widget.FooterPreference
        android:key="footer"
        android:title="@string/core_control_description"
        android:selectable="false" />
</PreferenceScreen>
